tests/parser/expr_parser/snapshots/kasl__tests__parser__expr_parser__op_parser__parse_many_ops.snap
---
source: src/tests/parser/expr_parser/op_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 25,
        },
        kind: GlobalConst {
            name: "value",
            value_type: None,
            def_val: [
                ExprToken {
                    range: Range {
                        start: 12,
                        end: 13,
                    },
                    kind: IntLiteral(
                        3,
                    ),
                },
                ExprToken {
                    range: Range {
                        start: 14,
                        end: 15,
                    },
                    kind: Operator(
                        "*",
                    ),
                },
                ExprToken {
                    range: Range {
                        start: 16,
                        end: 17,
                    },
                    kind: IntLiteral(
                        2,
                    ),
                },
                ExprToken {
                    range: Range {
                        start: 18,
                        end: 19,
                    },
                    kind: Operator(
                        "+",
                    ),
                },
                ExprToken {
                    range: Range {
                        start: 20,
                        end: 21,
                    },
                    kind: IntLiteral(
                        5,
                    ),
                },
                ExprToken {
                    range: Range {
                        start: 22,
                        end: 23,
                    },
                    kind: Operator(
                        "*",
                    ),
                },
                ExprToken {
                    range: Range {
                        start: 24,
                        end: 25,
                    },
                    kind: IntLiteral(
                        2,
                    ),
                },
            ],
        },
    },
]
